styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&display=swap');

* {
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    min-height: 100vh;
}


nav {
    height: 72px;
    display: flex;
    align-content: center;
    justify-content: space-between;
    background-color: #1F2937;
    padding: 1.5rem 12%;
}

.logo {
    display: flex;
    align-items: center;
    font-size: 24px;
    color: #F9FAf8;

}

ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
    color: #F9FAf8;
}

.links {
    display: flex;
    align-items: center;
}

/* hero */

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 70vh;
    background-color: #1F2937;
}

.hero-main-text {
    width: 400px;
    margin: 0 200px;

}

.hero-main-text > h2 {
font-size: 48px;
font-weight: 900;
color: #F9FAf8;
}

.hero-main-text > p {
    font-size: 18px;
    color: #e5e7eb;
}

button {
    margin-top: 12px;
    padding: 8px 28px;
    background-color: #3882F6;
    color: #F9FAf8;
    border-radius: 6px;
    border: none;
}


.hero-image {
    width: 400px;
    height: 200px;
    background-color: lightslategray;
    color: #F9FAf8;
}

.hero-content {
    display: flex;
    max-width: 1040px;
}

.page-2 {
    min-height: 70vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.page-2-title {
    display: flex;
    margin-bottom: 150px;
    font-size: 36px;
    font-weight: 900;
}

.cards-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 52px;
}

.card {
    width: 250px;
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.text {
    text-align: center;
}

.box {
    border-color: #3882F6;
    border-style: solid;
    height: 48px;
}

.testimonial-page {
    min-height: 70vh;
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: 100;
    width: 790px;
    color: #1F2937;
}

.author {
    margin-left: 500px;
    font-size: 24px;
}

.call-to-action-page {
    min-height: 35vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cta-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 200px;
    padding: 32px;
    background-color: #3882F6;
    border-radius: 8px;
}

.cta-content {
    color: #F9FAf8;
}

.cta-header {
    font-size: 18px;
    font-weight: 600;
    margin-bottom: 2px;
}

.cta-button > button {
    border-style: solid;
}

